--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,14 +46,6 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="435dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/textView"
-            android:layout_gravity="left|top" />
-
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
@@ -61,6 +53,13 @@
             android:text="New Button"
             android:id="@+id/button1"
             android:layout_gravity="center_horizontal|bottom" />
+
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="474dp"
+            android:id="@+id/webView"
+            android:layout_gravity="center_horizontal|top" />
+
     </FrameLayout>
 
 </FrameLayout>
